[package]
name = "tree-sitter-mql5-binding"
description = "mql5 grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "mql5"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-mql5"
edition = "2018"
license = "ISC"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
crate-type = ["cdylib"]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }

[build-dependencies]
cc = "1.0"
napi-build = "2.0.1"
